# threat-intel-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.bat  test_report.md  threat-intel-agent-prd-v2.md
app/: config.py  deps.py  main.py  task_manager.py
app/agents/: base.py  critic.py  enrichment_agent.py  intent_classifier.py  ioc_extractor.py  llm_client.py  memory.py  orchestrator.py  persistence.py  planner.py  researcher.py  search_cache.py  sigma_generator.py  synthesis.py  web_search.py
app/assets/: __init__.py  cpe_normalizer.py  csv_import.py  json_import.py  matcher.py  nmap_import.py  repository.py  risk.py  space_analysis.py
app/db/: engine.py  models.py
app/exporters/: ioc_csv.py  markdown.py  pdf.py  sigma.py  stix.py  zip_bundle.py
app/routers/: analyze.py  assets.py  export.py  history.py  settings.py  sources.py  stream.py  system.py
app/schemas/: analyze.py  assets.py  events.py  history.py
app/scripts/: init.py
app/utils/: attck_loader.py  cost_calc.py  crypto.py  defang.py  ioc_regex.py  slug.py  time.py
app/workers/: attck_sync.py  cache_cleanup.py  health_check.py  kev_sync.py  token_aggregator.py
docs/: progress.md  remediation_report.md
docs/design/: components-demo.html
static/: index.html
static/assets/: app.css  components.css  tokens.css
static/lib/: api.js  app.js  attck-i18n.js  router.js  sse.js  utils.js
static/new-design/: components.css  report.css  report.html  tokens.css  workspace.html
static/pages/: assets.js  error.js  history-detail.js  onboarding.js  (+4 more)
tests/: conftest.py
(+45 files in other folders)
