[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "threat-intel-agent"
version = "0.8.0"
description = "Enterprise SOC Threat Intelligence Deep Research Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "anthropic>=0.34",
    "openai>=1.40",
    "httpx[socks]>=0.27",
    "aiolimiter>=1.1",
    "stix2>=3.0",
    "weasyprint>=61.0",
    "markdown-it-py>=3.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "cryptography>=42",
    "structlog>=24",
    "tenacity>=8.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx[socks]>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
